tests/issues-OLD/test254.expected
Error: syntax error, near '=/=', operator expected, tests/issues-OLD/test254.pl:4
