tests/issues-OLD/test254.pl
:-initialization(main).

main :-
	X is 1 =/= 2.

